--- a/photography/filmgallery.css
+++ b/photography/filmgallery.css
@@ -202,6 +202,7 @@ img {
 .pagesubtitle {
     margin-top: 20px;
     margin-bottom: 20px;
+    white-space: nowrap;
 }
 
 .homelink {
