--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,7 +81,7 @@ html {
     }
 
     p,li {
-        font-size: 25px;
+        font-size: larger;
     }
 
     h1 {
@@ -119,7 +119,7 @@ html {
     }
 
     p,li {
-        font-size: 20px;
+        font-size:large;
     }
 
     h1 {
